edit match history score
